--- a/p89/src/scss/styles.scss
+++ b/p89/src/scss/styles.scss
@@ -34,9 +34,8 @@ $theme-colors-border-subtle-dark:
 @import "bootstrap/scss/bootstrap";
 
 
-li.todo-done .todo-text {
-  text-decoration: line-through;
-  opacity: 0.6;
+.dark-mode {
+  background: #111 !important;
+  color: #fff !important;
 }
-
 
